# more-ai-less-work

./: LICENSE  README.md  app_metadata.json  app_metadata_backup.json  call_api.py  create_test_with_failed.py  excel_anal.py  geocoded_data.parquet  geocoding.py  geocoding_cache.db  main.py  map.html  pyproject.toml  requirements.txt  test_data.xlsx  test_metadata.json  공문서_human.md  공문서_human.txt  공문서_prompt.md  국민신문고_human.md  국민신문고_human.txt  국민신문고_prompt.md
